--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+.box {
+  width: 300px;
+  height: 150px;
+  padding: 10px;
+  border: 1px solid black;
+  float: left;
+  text-align: left;
+}
+
+.delete {
+  cursor: pointer;
+}
